jsonrpc-types/src/snapshots/jsonrpc_types__response__tests__response_serde-12.snap
---
source: jsonrpc-types/src/response.rs
expression: "Response::new(JsonRPCResult::<(),\n            ()>::Error(JsonRPCError {\n            code: -1,\n            message: \"message\".to_string(),\n            data: None,\n        }), None)"
---
{
  "jsonrpc": "2.0",
  "error": {
    "code": -1,
    "message": "message"
  },
  "id": null
}
