jsonrpc-types/src/snapshots/jsonrpc_types__response__tests__response_serde-13.snap
---
source: jsonrpc-types/src/response.rs
expression: "Response::new(JsonRPCResult::<_, ()>::Result(Params { p0: 0, p1: 1 }),\n    Some(1))"
---
{
  "jsonrpc": "2.0",
  "result": {
    "p0": 0,
    "p1": 1
  },
  "id": 1
}
