jsonrpc-types/src/snapshots/jsonrpc_types__response__tests__response_serde-15.snap
---
source: jsonrpc-types/src/response.rs
expression: "Response::new(JsonRPCResult::<(),\n            _>::Error(JsonRPCError {\n            code: -1,\n            message: \"message\".to_string(),\n            data: Some(Params { p0: 0, p1: 1 }),\n        }), Some(1))"
---
{
  "jsonrpc": "2.0",
  "error": {
    "code": -1,
    "message": "message",
    "data": {
      "p0": 0,
      "p1": 1
    }
  },
  "id": 1
}
