jsonrpc-types/src/snapshots/jsonrpc_types__response__tests__response_serde-2.snap
---
source: jsonrpc-types/src/response.rs
expression: "Response::new(JsonRPCResult::<_, ()>::Result(1), None)"
---
{
  "jsonrpc": "2.0",
  "result": 1,
  "id": null
}
